--- a/debit_credit_tasks.ipynb
+++ b/debit_credit_tasks.ipynb
@@ -139,12 +139,164 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "465d18ff-82f9-4317-8171-75fec87ddb68",
+   "metadata": {},
+   "source": [
+    "```Давайте розглянемо більш складну задачу, яка включатиме декілька фінансових показників і аналіз ефективності обертаємості дебіторської заборгованості в динаміці, а також порівняння з галузевими стандартами.\n",
+    "\n",
+    "Складна задача з обертаємістю дебіторської заборгованості\n",
+    "Умова:\n",
+    "Компанія \"Дельта\" займається виробництвом і продажем електроніки. Протягом останніх трьох років її фінансові показники мають такі значення:\n",
+    "\n",
+    "Рік\tЧистий обсяг продажів (грн)\tДебіторська заборгованість на початок року (грн)\tДебіторська заборгованість на кінець року (грн)\n",
+    "Рік 1\t4 000 000\t500 000\t600 000\n",
+    "Рік 2\t4 500 000\t600 000\t650 000\n",
+    "Рік 3\t5 000 000\t650 000\t700 000\n",
+    "Галузевий стандарт обертаємості дебіторської заборгованості – 10 разів на рік.\n",
+    "\n",
+    "Розрахуйте обертаємість дебіторської заборгованості для кожного року компанії \"Дельта\".\n",
+    "Визначте середній період погашення дебіторської заборгованості (у днях) для кожного року.\n",
+    "Проаналізуйте динаміку обертаємості дебіторської заборгованості компанії та порівняйте з галузевим стандартом. Вкажіть, чи є тенденція до покращення або погіршення.\n",
+    "Визначте, які кроки можна зробити для підвищення обертаємості дебіторської заборгованості.```"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f27ed52a-b115-406e-b5d4-9d7fa5e5baa0",
+   "execution_count": 23,
+   "id": "2a770457-ee6b-4bc9-ad7b-fcf741ac77a4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "a251e38b-5d69-4f0f-b725-2d09e8394fc2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame({\n",
+    "'years': [1,2,3], \n",
+    "'sales':[4_000_000, 4_500_000, 5_000_000],\n",
+    "'debit_start':[500_000, 600_000, 650_000],\n",
+    "'debit_finish':[600_000, 650_000, 700_000]\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "6ddb12cd-1ae9-45f6-97f7-a75612e36e32",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "years\n",
+      "sales\n",
+      "debit_start\n",
+      "debit_finish\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x in dfs:\n",
+    "    print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "a83571c8-9439-4c95-aa52-8c018cd29adf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>years</th>\n",
+       "      <th>sales</th>\n",
+       "      <th>debit_start</th>\n",
+       "      <th>debit_finish</th>\n",
+       "      <th>ART</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4000000</td>\n",
+       "      <td>500000</td>\n",
+       "      <td>600000</td>\n",
+       "      <td>7.272727</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>4500000</td>\n",
+       "      <td>600000</td>\n",
+       "      <td>650000</td>\n",
+       "      <td>7.200000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>5000000</td>\n",
+       "      <td>650000</td>\n",
+       "      <td>700000</td>\n",
+       "      <td>7.407407</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   years    sales  debit_start  debit_finish       ART\n",
+       "0      1  4000000       500000        600000  7.272727\n",
+       "1      2  4500000       600000        650000  7.200000\n",
+       "2      3  5000000       650000        700000  7.407407"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['ART'] = df['sales']/((df['debit_start']+df['debit_finish'])/2)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "792f1aa7-8e0f-4ac2-a05f-7bed457de79c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['ART in days'] = 365/df[]"
+   ]
   }
  ],
  "metadata": {
