--- a/debit_credit_tasks.ipynb
+++ b/debit_credit_tasks.ipynb
@@ -290,13 +290,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "792f1aa7-8e0f-4ac2-a05f-7bed457de79c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>years</th>\n",
+       "      <th>sales</th>\n",
+       "      <th>debit_start</th>\n",
+       "      <th>debit_finish</th>\n",
+       "      <th>ART</th>\n",
+       "      <th>ART in days</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4000000</td>\n",
+       "      <td>500000</td>\n",
+       "      <td>600000</td>\n",
+       "      <td>7.272727</td>\n",
+       "      <td>50.187500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>4500000</td>\n",
+       "      <td>600000</td>\n",
+       "      <td>650000</td>\n",
+       "      <td>7.200000</td>\n",
+       "      <td>50.694444</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>5000000</td>\n",
+       "      <td>650000</td>\n",
+       "      <td>700000</td>\n",
+       "      <td>7.407407</td>\n",
+       "      <td>49.275000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   years    sales  debit_start  debit_finish       ART  ART in days\n",
+       "0      1  4000000       500000        600000  7.272727    50.187500\n",
+       "1      2  4500000       600000        650000  7.200000    50.694444\n",
+       "2      3  5000000       650000        700000  7.407407    49.275000"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df['ART in days'] = 365/df[]"
+    "df['ART in days'] = 365/df['ART']\n",
+    "df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "861c8a16-ec54-4dd7-81fa-fcdde1de003f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
