--- a/debit_credit_tasks.ipynb
+++ b/debit_credit_tasks.ipynb
@@ -139,8 +139,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "2a770457-ee6b-4bc9-ad7b-fcf741ac77a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "465d18ff-82f9-4317-8171-75fec87ddb68",
+   "id": "10acfbe7-9f2e-4974-bf87-05fe87957ab4",
    "metadata": {},
    "source": [
     "```Давайте розглянемо більш складну задачу, яка включатиме декілька фінансових показників і аналіз ефективності обертаємості дебіторської заборгованості в динаміці, а також порівняння з галузевими стандартами.\n",
@@ -159,16 +169,6 @@
     "Визначте середній період погашення дебіторської заборгованості (у днях) для кожного року.\n",
     "Проаналізуйте динаміку обертаємості дебіторської заборгованості компанії та порівняйте з галузевим стандартом. Вкажіть, чи є тенденція до покращення або погіршення.\n",
     "Визначте, які кроки можна зробити для підвищення обертаємості дебіторської заборгованості.```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "2a770457-ee6b-4bc9-ad7b-fcf741ac77a4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd"
    ]
   },
   {
@@ -381,9 +381,541 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "7b720f0f-4f79-461a-a525-86a8ea878b7d",
+   "metadata": {},
+   "source": [
+    "```Давайте розглянемо більш складну задачу, яка включатиме декілька фінансових показників і аналіз ефективності обертаємості дебіторської заборгованості в динаміці, а також порівняння з галузевими стандартами.\n",
+    "\n",
+    "Складна задача з обертаємістю дебіторської заборгованості\n",
+    "Умова:\n",
+    "Компанія \"Дельта\" займається виробництвом і продажем електроніки. Протягом останніх трьох років її фінансові показники мають такі значення:\n",
+    "\n",
+    "Рік\tЧистий обсяг продажів (грн)\tДебіторська заборгованість на початок року (грн)\tДебіторська заборгованість на кінець року (грн)\n",
+    "Рік 1\t4 000 000\t500 000\t600 000\n",
+    "Рік 2\t4 500 000\t600 000\t650 000\n",
+    "Рік 3\t5 000 000\t650 000\t700 000\n",
+    "Галузевий стандарт обертаємості дебіторської заборгованості – 10 разів на рік.\n",
+    "\n",
+    "Розрахуйте обертаємість дебіторської заборгованості для кожного року компанії \"Дельта\".\n",
+    "Визначте середній період погашення дебіторської заборгованості (у днях) для кожного року.\n",
+    "Проаналізуйте динаміку обертаємості дебіторської заборгованості компанії та порівняйте з галузевим стандартом. Вкажіть, чи є тенденція до покращення або погіршення.\n",
+    "Визначте, які кроки можна зробити для підвищення обертаємості дебіторської заборгованості.```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "f899f852-c336-4a5f-a470-62961f422192",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "3c8f993b-b3f0-4e69-8de9-f74dc578567f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.DataFrame({\n",
+    "    'years': [1,2,3],\n",
+    "    'revenue': [4_000_000, 4_500_000, 5_000_000],\n",
+    "    'debit_start': [500_000, 600_000, 650_000],\n",
+    "    'debit_end': [600_000, 650_000, 700_000]\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "9ef6ef4a-c71f-42da-9fa0-ba23112b425a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['debit_avg'] = round(data['revenue']/((data['debit_start']+data['debit_end'])/2),2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "0b00cc07-e05c-47a5-bf0a-cad1e6bf657a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>years</th>\n",
+       "      <th>revenue</th>\n",
+       "      <th>debit_start</th>\n",
+       "      <th>debit_end</th>\n",
+       "      <th>debit_avg</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4000000</td>\n",
+       "      <td>500000</td>\n",
+       "      <td>600000</td>\n",
+       "      <td>7.27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>4500000</td>\n",
+       "      <td>600000</td>\n",
+       "      <td>650000</td>\n",
+       "      <td>7.20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>5000000</td>\n",
+       "      <td>650000</td>\n",
+       "      <td>700000</td>\n",
+       "      <td>7.41</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   years  revenue  debit_start  debit_end  debit_avg\n",
+       "0      1  4000000       500000     600000       7.27\n",
+       "1      2  4500000       600000     650000       7.20\n",
+       "2      3  5000000       650000     700000       7.41"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "ad400803-4b20-49a2-bebc-a455cbaa2dcd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['debit_liquide_days'] = round(365/data['debit_avg'],1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "ad2ec1f5-bc76-4dd7-9699-649a5e938970",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>years</th>\n",
+       "      <th>revenue</th>\n",
+       "      <th>debit_start</th>\n",
+       "      <th>debit_end</th>\n",
+       "      <th>debit_avg</th>\n",
+       "      <th>debit_liquide_days</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4000000</td>\n",
+       "      <td>500000</td>\n",
+       "      <td>600000</td>\n",
+       "      <td>7.27</td>\n",
+       "      <td>50.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>4500000</td>\n",
+       "      <td>600000</td>\n",
+       "      <td>650000</td>\n",
+       "      <td>7.20</td>\n",
+       "      <td>50.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>5000000</td>\n",
+       "      <td>650000</td>\n",
+       "      <td>700000</td>\n",
+       "      <td>7.41</td>\n",
+       "      <td>49.3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   years  revenue  debit_start  debit_end  debit_avg  debit_liquide_days\n",
+       "0      1  4000000       500000     600000       7.27                50.2\n",
+       "1      2  4500000       600000     650000       7.20                50.7\n",
+       "2      3  5000000       650000     700000       7.41                49.3"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1aab39b3-cba3-44b9-8854-95e6061c52fc",
+   "metadata": {},
+   "source": [
+    "### Задача: Обертаємість запасів  \n",
+    "\n",
+    "Компанія \"Альфа\" займається виробництвом меблів. Її фінансові показники за останні три роки мають такі значення:  \n",
+    "\n",
+    "| **Рік** | **Собівартість реалізованої продукції (грн)** | **Запаси на початок року (грн)** | **Запаси на кінець року (грн)** |  \n",
+    "|---------|--------------------------------------------|----------------------------------|--------------------------------|  \n",
+    "| Рік 1   | 3 200 000                                  | 400 000                          | 500 000                        |  \n",
+    "| Рік 2   | 3 600 000                                  | 500 000                          | 550 000                        |  \n",
+    "| Рік 3   | 4 000 000                                  | 550 000                          | 600 000                        |  \n",
+    "\n",
+    "Галузевий стандарт обертаємості запасів – 8 разів на рік.  \n",
+    "\n",
+    "### Завдання:  \n",
+    "1. **Розрахуйте обертаємість запасів (ОЗ) для кожного року компанії \"Альфа\".**  \n",
+    "   Формула:  \n",
+    "   \\$ ОЗ = \\frac{\\text{Собівартість реалізованої продукції}}{\\text{Середні запаси}} $  \n",
+    "\n",
+    "2. **Визначте середній період обороту запасів (у днях) для кожного року.**  \n",
+    "   Формула:  \n",
+    "   \\$СПО = \\frac{365}{ОЗ}$  \n",
+    "\n",
+    "3. **Проаналізуйте динаміку обертаємості запасів компанії та порівняйте з галузевим стандартом.**  \n",
+    "\n",
+    "4. **Запропонуйте кроки для підвищення обертаємості запасів.**  \n",
+    "\n",
+    "---  \n",
+    "Якщо потрібно, я можу одразу розв'язати цю задачу! 😊"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "84244162-c5ee-4649-936f-5d2e9c1f9593",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.DataFrame({\n",
+    "    'year': [2023,2024,2025],\n",
+    "    'COGS': [3_200_000, 3_600_000, 4_000_000],\n",
+    "    'warehouse_start': [400_000, 500_000, 550_000],\n",
+    "    'warehouse_end': [500_000, 550_000, 600_000]\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "12d12a9f-2b6d-4f6a-9d9c-5e7b3de2a4d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>COGS</th>\n",
+       "      <th>warehouse_start</th>\n",
+       "      <th>warehouse_end</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2023</td>\n",
+       "      <td>3200000</td>\n",
+       "      <td>400000</td>\n",
+       "      <td>500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2024</td>\n",
+       "      <td>3600000</td>\n",
+       "      <td>500000</td>\n",
+       "      <td>550000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2025</td>\n",
+       "      <td>4000000</td>\n",
+       "      <td>550000</td>\n",
+       "      <td>600000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   year     COGS  warehouse_start  warehouse_end\n",
+       "0  2023  3200000           400000         500000\n",
+       "1  2024  3600000           500000         550000\n",
+       "2  2025  4000000           550000         600000"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "561d1197-d28d-4f57-8b68-aa7669232623",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>COGS</th>\n",
+       "      <th>warehouse_start</th>\n",
+       "      <th>warehouse_end</th>\n",
+       "      <th>inventory_turover</th>\n",
+       "      <th>inventory_turover_in_days</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2023</td>\n",
+       "      <td>3200000</td>\n",
+       "      <td>400000</td>\n",
+       "      <td>500000</td>\n",
+       "      <td>7.11</td>\n",
+       "      <td>205.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2024</td>\n",
+       "      <td>3600000</td>\n",
+       "      <td>500000</td>\n",
+       "      <td>550000</td>\n",
+       "      <td>6.86</td>\n",
+       "      <td>213.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2025</td>\n",
+       "      <td>4000000</td>\n",
+       "      <td>550000</td>\n",
+       "      <td>600000</td>\n",
+       "      <td>6.96</td>\n",
+       "      <td>209.8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   year     COGS  warehouse_start  warehouse_end  inventory_turover  \\\n",
+       "0  2023  3200000           400000         500000               7.11   \n",
+       "1  2024  3600000           500000         550000               6.86   \n",
+       "2  2025  4000000           550000         600000               6.96   \n",
+       "\n",
+       "   inventory_turover_in_days  \n",
+       "0                      205.1  \n",
+       "1                      213.5  \n",
+       "2                      209.8  "
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['inventory_turover'] = round(data['COGS']/((data['warehouse_start']+data['warehouse_end'])/2),2)\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "c248ac40-a9ff-4335-af98-4eb233965463",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>COGS</th>\n",
+       "      <th>warehouse_start</th>\n",
+       "      <th>warehouse_end</th>\n",
+       "      <th>inventory_turover</th>\n",
+       "      <th>inventory_turover_in_days</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2023</td>\n",
+       "      <td>3200000</td>\n",
+       "      <td>400000</td>\n",
+       "      <td>500000</td>\n",
+       "      <td>7.11</td>\n",
+       "      <td>51.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2024</td>\n",
+       "      <td>3600000</td>\n",
+       "      <td>500000</td>\n",
+       "      <td>550000</td>\n",
+       "      <td>6.86</td>\n",
+       "      <td>53.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2025</td>\n",
+       "      <td>4000000</td>\n",
+       "      <td>550000</td>\n",
+       "      <td>600000</td>\n",
+       "      <td>6.96</td>\n",
+       "      <td>52.4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   year     COGS  warehouse_start  warehouse_end  inventory_turover  \\\n",
+       "0  2023  3200000           400000         500000               7.11   \n",
+       "1  2024  3600000           500000         550000               6.86   \n",
+       "2  2025  4000000           550000         600000               6.96   \n",
+       "\n",
+       "   inventory_turover_in_days  \n",
+       "0                       51.3  \n",
+       "1                       53.2  \n",
+       "2                       52.4  "
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['inventory_turover_in_days'] = round(365/data['inventory_turover'],1)\n",
+    "data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe182463-d3a5-43a9-8469-63bd1aafa0fc",
+   "id": "5520ea05-dd52-40a6-b20f-c6e870ab5ad8",
    "metadata": {},
    "outputs": [],
    "source": []
