Using Lookup Functions (VLOOKUP) to Fill the Database Sheet

--- a/debit_credit_tasks.ipynb
+++ b/debit_credit_tasks.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "0d77c4e8-aa7d-4341-b183-2cabf5329147",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "7199f46d-b2a9-41ec-b2b6-dc5fa15c3cc6",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "c1f7f3f1-b75b-4bb1-abf4-5eb394be6c20",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "c20aa107-4e89-472e-916c-a8c8e8ce77d2",
    "metadata": {},
    "outputs": [
@@ -55,7 +55,7 @@
        "48.666666666666664"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "id": "04cb0df2-c0be-4710-bbc5-d177fd9baf5a",
    "metadata": {},
    "outputs": [],
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "id": "65621617-52c3-4839-8560-3009983c5e06",
    "metadata": {},
    "outputs": [
@@ -106,7 +106,7 @@
        "9.090909090909092"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "id": "0b2d19dc-5441-4ef5-a909-413f5294d0e2",
    "metadata": {},
    "outputs": [
@@ -129,7 +129,7 @@
        "275000.0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "id": "2a770457-ee6b-4bc9-ad7b-fcf741ac77a4",
    "metadata": {},
    "outputs": [],
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 20,
    "id": "a251e38b-5d69-4f0f-b725-2d09e8394fc2",
    "metadata": {},
    "outputs": [],
@@ -188,101 +188,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "6ddb12cd-1ae9-45f6-97f7-a75612e36e32",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "years\n",
-      "sales\n",
-      "debit_start\n",
-      "debit_finish\n"
-     ]
-    }
-   ],
-   "source": [
-    "for x in dfs:\n",
-    "    print(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "a83571c8-9439-4c95-aa52-8c018cd29adf",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>years</th>\n",
-       "      <th>sales</th>\n",
-       "      <th>debit_start</th>\n",
-       "      <th>debit_finish</th>\n",
-       "      <th>ART</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>4000000</td>\n",
-       "      <td>500000</td>\n",
-       "      <td>600000</td>\n",
-       "      <td>7.272727</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>4500000</td>\n",
-       "      <td>600000</td>\n",
-       "      <td>650000</td>\n",
-       "      <td>7.200000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>5000000</td>\n",
-       "      <td>650000</td>\n",
-       "      <td>700000</td>\n",
-       "      <td>7.407407</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   years    sales  debit_start  debit_finish       ART\n",
-       "0      1  4000000       500000        600000  7.272727\n",
-       "1      2  4500000       600000        650000  7.200000\n",
-       "2      3  5000000       650000        700000  7.407407"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df['ART'] = df['sales']/((df['debit_start']+df['debit_finish'])/2)\n",
     "df"
@@ -290,83 +199,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "792f1aa7-8e0f-4ac2-a05f-7bed457de79c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>years</th>\n",
-       "      <th>sales</th>\n",
-       "      <th>debit_start</th>\n",
-       "      <th>debit_finish</th>\n",
-       "      <th>ART</th>\n",
-       "      <th>ART in days</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>4000000</td>\n",
-       "      <td>500000</td>\n",
-       "      <td>600000</td>\n",
-       "      <td>7.272727</td>\n",
-       "      <td>50.187500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>4500000</td>\n",
-       "      <td>600000</td>\n",
-       "      <td>650000</td>\n",
-       "      <td>7.200000</td>\n",
-       "      <td>50.694444</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>5000000</td>\n",
-       "      <td>650000</td>\n",
-       "      <td>700000</td>\n",
-       "      <td>7.407407</td>\n",
-       "      <td>49.275000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   years    sales  debit_start  debit_finish       ART  ART in days\n",
-       "0      1  4000000       500000        600000  7.272727    50.187500\n",
-       "1      2  4500000       600000        650000  7.200000    50.694444\n",
-       "2      3  5000000       650000        700000  7.407407    49.275000"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df['ART in days'] = 365/df['ART']\n",
     "df"
@@ -405,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "f899f852-c336-4a5f-a470-62961f422192",
    "metadata": {},
    "outputs": [],
@@ -415,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "id": "3c8f993b-b3f0-4e69-8de9-f74dc578567f",
    "metadata": {},
    "outputs": [],
@@ -430,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "id": "9ef6ef4a-c71f-42da-9fa0-ba23112b425a",
    "metadata": {},
    "outputs": [],
@@ -440,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "id": "0b00cc07-e05c-47a5-bf0a-cad1e6bf657a",
    "metadata": {},
    "outputs": [
@@ -508,7 +344,7 @@
        "2      3  5000000       650000     700000       7.41"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "id": "ad400803-4b20-49a2-bebc-a455cbaa2dcd",
    "metadata": {},
    "outputs": [],
@@ -529,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "id": "ad2ec1f5-bc76-4dd7-9699-649a5e938970",
    "metadata": {},
    "outputs": [
@@ -601,7 +437,7 @@
        "2      3  5000000       650000     700000       7.41                49.3"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -646,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "id": "84244162-c5ee-4649-936f-5d2e9c1f9593",
    "metadata": {},
    "outputs": [],
@@ -661,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "id": "12d12a9f-2b6d-4f6a-9d9c-5e7b3de2a4d1",
    "metadata": {},
    "outputs": [
@@ -725,7 +561,7 @@
        "2  2025  4000000           550000         600000"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -736,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 31,
    "id": "561d1197-d28d-4f57-8b68-aa7669232623",
    "metadata": {},
    "outputs": [
@@ -766,7 +602,6 @@
        "      <th>warehouse_start</th>\n",
        "      <th>warehouse_end</th>\n",
        "      <th>inventory_turover</th>\n",
-       "      <th>inventory_turover_in_days</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -777,7 +612,6 @@
        "      <td>400000</td>\n",
        "      <td>500000</td>\n",
        "      <td>7.11</td>\n",
-       "      <td>205.1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -786,7 +620,6 @@
        "      <td>500000</td>\n",
        "      <td>550000</td>\n",
        "      <td>6.86</td>\n",
-       "      <td>213.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -795,25 +628,19 @@
        "      <td>550000</td>\n",
        "      <td>600000</td>\n",
        "      <td>6.96</td>\n",
-       "      <td>209.8</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   year     COGS  warehouse_start  warehouse_end  inventory_turover  \\\n",
-       "0  2023  3200000           400000         500000               7.11   \n",
-       "1  2024  3600000           500000         550000               6.86   \n",
-       "2  2025  4000000           550000         600000               6.96   \n",
-       "\n",
-       "   inventory_turover_in_days  \n",
-       "0                      205.1  \n",
-       "1                      213.5  \n",
-       "2                      209.8  "
+       "   year     COGS  warehouse_start  warehouse_end  inventory_turover\n",
+       "0  2023  3200000           400000         500000               7.11\n",
+       "1  2024  3600000           500000         550000               6.86\n",
+       "2  2025  4000000           550000         600000               6.96"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -825,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 32,
    "id": "c248ac40-a9ff-4335-af98-4eb233965463",
    "metadata": {},
    "outputs": [
@@ -902,7 +729,7 @@
        "2                       52.4  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
